--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,12 @@
-@import "tailwindcss";  
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
+@import "tailwindcss";
 @plugin "daisyui";
+
+.roboto-font {
+  font-family: "Roboto", sans-serif;
+}
+
+.mont-font {
+  font-family: "Montserrat", sans-serif;
+}
